minor structure changes to the forms, JWT implemented

--- a/Files/header.css
+++ b/Files/header.css
@@ -15,7 +15,10 @@
     display: block;
 }
 
-.header-nav{
+.header-nav {
    padding: 5px 20px;
    box-shadow: 0 4px 4px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
