--- a/Files/base.css
+++ b/Files/base.css
@@ -5,7 +5,7 @@ body {
     background-color: rgba(30, 30, 30, 1);
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
     color: white;
     font-family: "Russo One", sans-serif;
 }
