--- a/Files/login.css
+++ b/Files/login.css
@@ -1,4 +1,3 @@
-/* name might be misleading -> actually stylesheet for login/register since they use the same elements*/
 @import "base.css";
 @import url(header.css);
  body {
@@ -9,7 +8,6 @@
         font-family: sans-serif;
       }
       main {
-        flex: 1;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -25,7 +23,7 @@
       .login-form {
         display: flex;
         flex-direction: column;
-        width: 300px;
+        width: 400px;
       }
       .login-form input,
       .login-form button {
@@ -35,11 +33,9 @@
       .login-form input {
         margin-bottom: 10px;
         padding: 8px;
-        font-size: 1em;
       }
       .login-form button {
         padding: 8px;
-        font-size: 1em;
       }
       .signup-prompt{
         color: white;
@@ -52,6 +48,43 @@
         padding: 20px
       }
       .side-image{
-        width: 400px;
+        max-width: 15vw;
         height: auto;
       }
+
+/* Phone screens */
+@media (max-width: 749px) {
+  .side-image {
+    display: none;
+  }
+  .login-container {
+    width: 100%;
+    padding: 0 10px; 
+  }
+  .login-form {
+    width: 100%;
+    min-width: 0;
+  }
+}
+
+/* Tablet screens */
+@media (min-width: 750px) and (max-width: 1100px) {
+  .form-layout {
+    flex-direction: row;
+    gap: 15px;
+    padding: 10px;
+  }
+  .side-image {
+    min-width: 25vw;
+    display: block;
+  }
+  .login-container {
+    width: 70%;
+    padding: 0 10px;
+  }
+  .login-form {
+    width: 100%;
+    min-width: 0;
+  }
+}
+
