folderstructure chnged. initial implementation of favorites and recent workouts

--- a/Files/login/login.css
+++ b/Files/login/login.css
@@ -1,5 +1,5 @@
-@import "base.css";
-@import url(header.css);
+@import "../base.css";
+@import url(../header.css);
  body {
         display: flex;
         flex-direction: column;
