--- a/Files/create-workout/create-workout.css
+++ b/Files/create-workout/create-workout.css
@@ -1,5 +1,5 @@
-@import url("base.css");
-@import url("header.css");
+@import url("../base.css");
+@import url("../header.css");
 
 body {
   background-color: #0f0f10;
