--- a/Files/signup/signup.css
+++ b/Files/signup/signup.css
@@ -1,63 +1,66 @@
 @import "../base.css";
 @import url(../header.css);
- body {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        margin: 0;
-        font-family: sans-serif;
-      }
-      main {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .signup-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      .signup-container h1 {
-        margin-bottom: 20px;
-      }
-      .signup-form {
-        display: flex;
-        flex-direction: column;
-        width: 400px;
-      }
-      .signup-form input,
-      .signup-form button,
-      .signup-form select
-       {
-        width: 100%;
-        box-sizing: border-box;
-      }
-      .signup-form input {
-        margin-bottom: 10px;
-        padding: 8px;
-      }
-      .signup-form select {
-        margin-bottom: 10px;
-        padding: 8px;
-        }
-      .signup-form button {
-        padding: 8px;
-      }
-      .signup-prompt{
-        color: white;
-      }
-      .form-layout{
-        display:flex;
-        align-items: center;
-        justify-content: center;
-        gap: 20px;
-        padding: 20px
-      }
-      .side-image{
-        max-width: 25vw;
-        min-width: 15vw;
-        height: auto;
-      }
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  font-family: sans-serif;
+}
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.signup-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.signup-container h1 {
+  margin-bottom: 20px;
+}
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+}
+.signup-form input,
+.signup-form button,
+.signup-form select {
+  width: 100%;
+  box-sizing: border-box;
+}
+.signup-form input {
+  margin-bottom: 10px;
+  padding: 8px;
+}
+.signup-form select {
+  margin-bottom: 10px;
+  padding: 8px;
+}
+.signup-form button {
+  padding: 8px;
+}
+.signup-prompt {
+  color: white;
+}
+.form-layout {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
+.side-image {
+  max-width: 25vw;
+  min-width: 15vw;
+  height: auto;
+}
+.visually-hidden {
+  position: absolute;
+  left: -9999px;
+}
 
 /* Phone screens */
 @media (max-width: 749px) {
